config/openshift/ephemeral/localtest-dc.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Route
  metadata:
    name: localtest
  spec:
    to:
      kind: Service
      name: localtest
- apiVersion: v1
  kind: Service
  metadata:
    name: localtest
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      name: localtest
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: localtest
  spec:
    template:
      metadata:
        labels:
          name: localtest
      spec:
        containers:
          - name: localtest
            image: "${image}"
            ports:
              - containerPort: 8080
                protocol: TCP
            readinessProbe:
              httpGet:
                path: /health/
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 21
            livenessProbe:
              httpGet:
                path: /ping/
                port: 8080
              initialDelaySeconds: 10
              failureThreshold: 5
              periodSeconds: 19
              timeoutSeconds: 5
            volumeMounts:
              - mountPath: /app/web/mnt
                name: localtest-pv
        volumes:
            - name: localtest-pv
              emptyDir: {}

    replicas: 1
    strategy:
      type: Rolling
    paused: false
    revisionHistoryLimit: 2
    minReadySeconds: 0
